# ubc-workday-api

./: .gitignore  LICENSE  README.md  pyproject.toml
ubcworkday/: __init__.py
ubcworkday/client/: README.md  __init__.py  auth.py  exceptions.py  response.py  session.py
ubcworkday/client/endpoints/: README.md  __init__.py  base.py  faceted.py  flow.py  prompt.py  task.py
ubcworkday/student/: __init__.py
ubcworkday/student/academic_planning/: README.md  __init__.py  evaluate_academic_requirements.py  view_evaluated_academic_requirements.py
ubcworkday/student/academic_records/: README.md  __init__.py  models.py  view_my_academic_progress.py  view_my_academic_record.py  view_my_grades.py
ubcworkday/student/contacts/: README.md  __init__.py  models.py  view_my_support_network.py
ubcworkday/student/graduation/: README.md  __init__.py  apply_for_program_completion.py
ubcworkday/student/registration/: README.md  __init__.py  find_course_sections.py  models.py  troubleshoot_registration.py  view_my_courses.py  view_my_saved_schedules.py
