[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ubcworkday"
version = "0.1.0"
description = "Unofficial Python client for UBC's Workday student tenant"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Seonwoo Yi", email = "swyi1210@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ubc", "workday", "student", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
]

[project.urls]
Repository = "https://github.com/yiseonwo/ubc-workday-api"

[tool.setuptools.packages.find]
include = ["ubcworkday*"]

[tool.setuptools.package-data]
ubcworkday = ["py.typed"]

[tool.mypy]
python_version = "3.11"
packages = ["ubcworkday"]
plugins = ["pydantic.mypy"]
strict = true
